added import statement for netpos payment client

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,10 +3,7 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
-        maven {
-            url "https://jitpack.io"
-            credentials { username "jp_h2namglqo2okk0oc6um0t9f61k" }
-        }
+        mavenLocal()
     }
 }
 dependencyResolutionManagement {
@@ -14,6 +11,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        mavenLocal()
         maven {
             url "https://jitpack.io"
             credentials { username "jp_h2namglqo2okk0oc6um0t9f61k" }
