--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    ndkVersion '21.3.6528147'
+    externalNativeBuild {
+        ndkBuild {
+            path file('src/main/jni/Android.mk')
+        }
+    }
 }
 
 dependencies {
@@ -42,9 +48,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
-    implementation "org.bitbucket.netplustechteam:contactless_sdk:1.0.8"
-    api files('libs/epmslib-release.aar')
-    api files('libs/nibssclient-release.aar')
+    implementation "com.netpluspay.contactless:contactless-sdk:1.0.9"
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'com.jakewharton.timber:timber:4.7.1'
@@ -69,4 +73,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     //workmanager
     implementation "androidx.work:work-runtime-ktx:2.8.0"
+    // Dependencies for Netpos Payment client
+    implementation "com.github.Netplus2:epmsLibrary:1.0.1"
+    implementation 'com.github.Netplus2:nibssclient:1.0.1'
 }
