--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,32 +47,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    implementation "com.netpluspay.contactless:contactless-sdk:1.0.9"
-    implementation 'pub.devrel:easypermissions:3.0.0'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'net.sf.j8583:j8583:1.17.0'
-    // Retrofit (Can be left out if you are already using retrofit)
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
-    implementation("com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.2")
-
-    //room (This can be left out if you are already using room)
-    implementation "androidx.room:room-runtime:2.4.2"
-    implementation "androidx.room:room-rxjava2:2.4.2"
-
     //preference
-    implementation("androidx.preference:preference-ktx:1.2.0")
     implementation 'com.pixplicity.easyprefs:EasyPrefs:1.10.0'
-
-    // Activity KTX for viewModels()
-    implementation "androidx.activity:activity-ktx:1.4.0"
-    // Lifecycles only (without ViewModel or LiveData)
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
-    //workmanager
-    implementation "androidx.work:work-runtime-ktx:2.8.0"
+    // Timber
+    implementation 'com.jakewharton.timber:timber:4.7.1'
+    // Gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    // Rx
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     // Dependencies for Netpos Payment client
     implementation "com.github.Netplus2:epmsLibrary:1.0.1"
     implementation 'com.github.Netplus2:nibssclient:1.0.1'
